--- a/Nas_Suchen_Postgres.csproj
+++ b/Nas_Suchen_Postgres.csproj
@@ -18,6 +18,7 @@
   <ItemGroup>
     <PackageReference Include="MySql.Data" Version="9.2.0" />
     <PackageReference Include="MySqlConnector" Version="2.4.0" />
+    <PackageReference Include="Npgsql" Version="9.0.4" />
   </ItemGroup>
 <ItemGroup Condition="'$(Configuration)' == 'Debug'">
     <Reference Include="Sort_Dialog">
